# biometrics

./: .gitignore  CMakeLists.txt  README.md
BiometricsProject/: BiometricsProject.cpp  BiometricsProject.h  CMakeLists.txt
BiometricsProject/src/: BiometricsProject.cpp
BiometricsProject_Fingerprint/: CMakeLists.txt
BiometricsProject_Fingerprint/src/: BiometricsProject.cpp
BiometricsProject_VoiceRecognition/: CMakeLists.txt
BiometricsProject_VoiceRecognition/src/: VoiceRecognition.cpp
